More updates to fixup UI to match previous behavior

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -43,8 +43,7 @@
 
     .font-size (@index) when (@index > 0) {
         .font-size-@{index} {
-            &,
-            pre {
+            &, .pre, pre {
                 font-size: ~"@{index}px" !important;
             }
 
@@ -108,7 +107,7 @@
         -webkit-animation: processing 1s linear infinite alternate;
     }
 
-    span {
+    .span, span {
         transition: opacity;
         transition-duration: 0.3s;
         transition-timing-function: ease-in-out;
@@ -153,9 +152,12 @@
 }
 
 .messages-container {
-
     //height: 150px;
     overflow-y: scroll;
+
+    > li {
+        display: block;
+    }
 }
 
 .omnisharp-atom-output {
@@ -197,7 +199,7 @@
         }
     }
 
-    pre {
+    .pre, pre {
         background: @base-background-color;
         margin: 0;
         padding: 0;
@@ -220,11 +222,12 @@
 }
 
 .find-output,
-.errors-output {
+.errors-output,
+.codecheck-output {
     background-color: @base-background-color;
 
-    ol,
-    li {
+    ol, .ol,
+    li, .li {
         margin: 0;
         padding: 0;
     }
@@ -241,7 +244,7 @@
             background-color: @background-color-selected;
         }
 
-        pre {
+        .pre, pre {
             background-color: transparent;
             padding: 2px 1px;
         }
@@ -268,7 +271,7 @@
         color: @text-color-warning;
     }
 
-    pre {
+    .pre, pre {
         padding: 2px 0;
     }
 }
@@ -335,7 +338,7 @@ li.autocomplete-omnisharp-atom {
         text-decoration: none;
     }
 
-    span {
+    .span, span {
         padding-left: 3px;
         padding-right: 3px;
     }
@@ -367,6 +370,13 @@ li.autocomplete-omnisharp-atom {
     }
 }
 
+.status-bar omnisharp-status-bar {
+    overflow: visible !important;
+    omnisharp-project-count, omnisharp-flame {
+        margin-right: 0 !important;
+    }
+}
+
 .error-warning-summary {
     color: @text-color;
     padding-left: 10px;
@@ -383,20 +393,20 @@ li.autocomplete-omnisharp-atom {
         color: @text-color-error;
     }
 
+    .icon-info {
+        color: @text-color-info;
+    }
+
     .icon-alert {
         color: @text-color-warning;
     }
 }
 
-.status-bar omnisharp-status-bar .inline-block {
-    margin-right: 0;
-}
-
-span.filename {
+.filename {
     color: #666;
 }
 
-li.selected span.filename {
+.selected .filename {
     text-shadow: none;
     color: #aaa;
 }
@@ -575,4 +585,12 @@ atom-text-editor, atom-text-editor::shadow {
     .unused {
         opacity: 0.6;
     }
+}
+
+omnisharp-dock-window {
+    min-height: 20em;
+}
+
+omnisharp-codecheck-message, omnisharp-codecheck-output, omnisharp-command-output, omnisharp-dock-window, omnisharp-resizer, omnisharp-find-message, omnisharp-framework-selector, omnisharp-highlight-element, omnisharp-output-window, omnisharp-output-list, omnisharp-output-message, omnisharp-signature-help, omnisharp-signature-parameter, omnisharp-project-element, omnisharp-solution-card, omnisharp-flame, omnisharp-command-runner, omnisharp-diagnostics, omnisharp-project-count, omnisharp-status-bar, omnisharp-test-results {
+    display: block;
 }
