--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -314,6 +314,13 @@ atom-text-editor::shadow {
         z-index: 1 !important;
         cursor: pointer;
     }
+
+    .findusages-underline .region {
+        border: 1px solid @background-color-info !important;
+        pointer-events: auto !important;
+        z-index: 1 !important;
+        cursor: pointer;
+    }
 }
 
 //autocomplete overrides, this is to keep @davidfowl happy
