Virtual scrolling lives!

--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -241,7 +241,7 @@
     .find-usages,
     .codecheck {
         background-color: @background-color-highlight;
-        //border: 1px solid @base-border-color;
+        border: 1px solid @base-border-color;
         width: 100%;
         padding: 2px 5px;
         margin: 0;
