--- a/styles/omnisharp-atom.less
+++ b/styles/omnisharp-atom.less
@@ -604,6 +604,6 @@ omnisharp-dock-window {
     min-height: 20em;
 }
 
-omnisharp-codecheck-message, omnisharp-codecheck-output, omnisharp-command-output, omnisharp-dock-window, omnisharp-resizer, omnisharp-find-message, omnisharp-framework-selector, omnisharp-highlight-element, omnisharp-output-window, omnisharp-output-list, omnisharp-output-message, omnisharp-signature-help, omnisharp-signature-parameter, omnisharp-project-element, omnisharp-solution-card, omnisharp-flame, omnisharp-command-runner, omnisharp-diagnostics, omnisharp-project-count, omnisharp-status-bar, omnisharp-test-results {
+omnisharp-codecheck-message, omnisharp-codecheck-output, omnisharp-command-output, omnisharp-dock-window, omnisharp-resizer, omnisharp-find-message, omnisharp-framework-selector, omnisharp-highlight-element, omnisharp-output-window, omnisharp-output-list, omnisharp-output-message, omnisharp-signature-help, omnisharp-project-element, omnisharp-solution-card, omnisharp-flame, omnisharp-command-runner, omnisharp-diagnostics, omnisharp-project-count, omnisharp-status-bar, omnisharp-test-results {
     display: block;
 }
